Revise README for PlanIt Event Management System
Updated README to provide comprehensive information about the PlanIt Event Management System, including features, installation instructions, and team details.